<resources>
    <string name="app_name">App Ban Hang</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_carts">Giỏ hàng</string>
    <string name="menu_search">Tìm kiếm</string>
    <string name="menu_order">Đơn hàng</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="hint_email">Email</string>
    <string name="title_add">Thêm</string>
    <string name="btn_back"><![CDATA[<< Quay lại]]></string>
    <string name="btn_reset_password">Đặt lại mật khẩu</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
