<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/menu_carts"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order_list"
            android:title="@string/menu_order"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            android:iconTint="@android:color/white"/>
    </group>

</menu>
